# wilab-datalogger

./: .gitignore  20-wilab.rules  adapter.py  commands.py  interface.py  main.py  pyproject.toml  readme.md  requirements.txt  slots.py
docs/: docs  usb0.py  usb1.py  usb2.py  usb3.py
qt/: mainwindow.ui  mainwindow.ui.autosave  qt.pyproject  test.py
src/: asdasd.csv  main.py  ui_controller.py
src/design/: mainwindow.py
src/hardware/: commands.py  protocol.py  slots.py  status.py  usb_adapter.py
src/processing/: counter.py  datalogger.py  interface.py  pg_exp_datalogger.py  pg_pairing_datalogger.py  photogate.py
src/ui/: main.py  table_model.py  ui_controller.py  window.py
