[tool.poetry]
name = "phys"
version = "0.1.0"
description = ""
authors = ["BardinPetr <bardin.petr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyusb = "^1.2.1"
pyside6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
